[package]
name = "networked-mpc-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
serde_json = { version = "1.0" }
serde = {version = "1.0", features=["derive"] }
paillier = { version = "0.2" }
futures_codec = "0.4.1"
futures = "0.3.16"
